logs/tweepy-utils.log
Listing '.'...
Listing './bin'...
Compiling './bin/list-nonfollowers.py'...
***   File "./bin/list-nonfollowers.py", line 41
    print "Stats for %s:" % username
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/unfollow-nonfollowers.py'...
***   File "./bin/unfollow-nonfollowers.py", line 15
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tweepy'...
Compiling './lib/python3.5/site-packages/tweepy/api.py'...
***   File "./lib/python3.5/site-packages/tweepy/api.py", line 340
    except TweepError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/auth.py'...
***   File "./lib/python3.5/site-packages/tweepy/auth.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/binder.py'...
***   File "./lib/python3.5/site-packages/tweepy/binder.py", line 148
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/cache.py'...
***   File "./lib/python3.5/site-packages/tweepy/cache.py", line 157
    print 'Warning! FileCache locking not supported on this system!'
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweepy/models.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (models.py, line 302)
Compiling './lib/python3.5/site-packages/tweepy/parsers.py'...
***   File "./lib/python3.5/site-packages/tweepy/parsers.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/streaming.py'...
***   File "./lib/python3.5/site-packages/tweepy/streaming.py", line 125
    except Exception, exception:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/utils.py'...
***   File "./lib/python3.5/site-packages/tweepy/utils.py", line 92
    raise ImportError, "Can't load a json library"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tweepy-1.12.egg-info'...
Listing './lib/python3.5/site-packages/tweepy_utils-0.1.dev7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
